--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
                     height: 100%;
                     width: 15%;
                     line-height: 50px;
-                    z-index: 3;
+                    z-index: 4;
                 }
                 .lowersect hr{
                     width: 80%;
@@ -58,42 +58,71 @@
                 .headers{
                     position: absolute;
                     width: 90vw;
-                    background-color: rgb(0,0,0,0.3);
+                    background-color: rgb(0,0,0);
                     padding: 25% 0;
                     z-index: 2;
                 }
-                .carousel{
-                    width: 100%;
-                    height: 90vh;
+                .box {
+                    display: flex;
+                    align-items: flex-start;
+                    background: #fff;
+                    height: 100vh;
+                    overflow: hidden;
                     position: relative;
                 }
-                .carousel > ul{
-                    margin: 0;
-                    padding: 0;
-                    list-style: none;
+                .box .single-box img {
+                    background: #000;
+                    -webkit-backface-visibility: hidden;
+                    backface-visibility: hidden;
+                    opacity: 0;
+                    /* transform: scale(1.5) rotate(15deg); */
+                    -webkit-animation: animate 16s infinite;
+                    animation: animate 16s infinite;
                 }
-                .slide{
-                    position: absolute;
-                    inset: 0;
+                .box .single-box:nth-child(3) img {
+                    -webkit-animation-delay: 4s;
+                    animation-delay: 4s;
+                }
+                .box .single-box:nth-child(2) img {
+                    -webkit-animation-delay: 8s;
+                    animation-delay: 8s;
+                }
+                .box .single-box:nth-child(1) img {
+                    -webkit-animation-delay: 12s;
+                    animation-delay: 12s;
+                }
+                .paranoia{
+                    width: 120%;
+                    position: absolute; top: -10%; left: -10%;
+                }
+                .blank{
+                    width: 120%;
+                    position: absolute; top: -30%; left: -15%;
+                }
+                @keyframes animate {
+                25% {
+                    opacity: 1;
+                    /* transform: scale(1) rotate(0); */
+                }
+                40% {
                     opacity: 0;
                 }
-                    .slide[data-active]{
-                        opacity: 1;
-                        z-index: 1;
-                    }
-                    .slide > img{
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                    li{
-                        float: right;
-                        margin: 0 10px;
-                    }
-                    a{
-                        text-decoration: none;
-                        color: black;
-                    }
+            }
+            #headeroverlay{
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100vw;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.4);
+                z-index: 2;
+                padding: 23% 48%;
+            }
+                #headeroverlay h1{
+                    font-size: 50px;
+                    color: white;
+                }
+
             #content{
                 grid-column: 2;
                 grid-row: 2;
@@ -166,7 +195,7 @@
                 /* Full width */
                 height: 100%;
                 /* Full height */
-                overflow: auto;
+                overflow: hidden;
                 /* Enable scroll if needed
                 background-color: rgb(0, 0, 0); */
                 background-color: rgba(0, 0, 0, 0.4);
@@ -181,15 +210,13 @@
                 animation-fill-mode: forwards;
                 /* top: 30%;*/
                 left: 8%;
-                overflow-y: scroll;
-                overflow-x: none;
+                overflow-y: none;
                 text-wrap: wrap;
                 background-color: white;
             }
                 .text-area{
                     width: 80ch;
                     padding: 15% 5%;
-                    overflow-y: scroll;
                     color: white;
                     /* background-color: rgb(0, 0, 0, 0.4); */
                 }
@@ -212,24 +239,16 @@
         <span style="display: block;" onclick="location.href='contacts.html'" onmouseover="this.style.cursor = 'pointer'"><p id="contact">Contact US!</p></span>
         <hr/>
     </div>
-    <div id="header" style="background-color: white;">
-        <section class="slideContainer">
-            <div class="carousel">
-                <div class="headers">
-                    <p style="text-align: center; font-size: 100px; color: white;">
-                        <b>ABOUT</b>
-                    </p>
-                </div>
-                <ul data-slides>
-                    <li class="slide" data-active>
-                        <img src="images/print 1.png" alt="Paranoia">
-                    </li>
-                    <li class="slide">
-                        <img src="images/print 2.png" alt="Paranoia">
-                    </li>
-                </ul>
-            </div>
-        </section>
+    <div id="header" style="background-color: black;">
+        <div class="wrapper box">
+            <div class="single-box" data-active><img src="images/slide1.jpg" width="120%"></div>
+            <div class="single-box paranoia"><img src="images/slide2.jpg" width="100%"></div>
+            <div class="single-box blank"><img src="images/slide3.jpg" width="100%" style="position: absolute; top: -30%; left: 0%;"></div>
+            <div class="single-box paranoia"><img src="images/testing.png" width="100%"></div>
+        </div>
+        <div id="headeroverlay">
+            <h1>ABOUT US</h1>
+        </div>
     </div>
     <div id="content" style="background-image: url('images/papertexturecutout.png');">
         <h1 style="text-align: center;"> WHO ARE WE? </h1>
@@ -444,21 +463,21 @@
         }
         };
 
-        slideshow();
-        function slideshow(){
-            const carousel = document.getElementsByClassName("carousel")[0];
-            const slides = carousel.querySelector("data-slides");
-            const activeSlide = slides.querySelector("[data-active]");
-            let newIndex = [...slides.children].indexOf("activeSlide");
-            newIndex++;
+        // slideshow();
+        // function slideshow(){
+        //     const carousel = document.getElementsByClassName("carousel")[0];
+        //     const slides = carousel.querySelector("data-slides");
+        //     const activeSlide = slides.querySelector("[data-active]");
+        //     let newIndex = [...slides.children].indexOf("activeSlide");
+        //     newIndex++;
 
-            // if (newIndex < 0) newIndex = slides.children.length - 1;
-            if (newIndex >= slides.children.length) newIndex = 0;
-            slides.children[newIndex].dataset.active = true;
-            delete activeSlide.dataset.active;
+        //     // if (newIndex < 0) newIndex = slides.children.length - 1;
+        //     if (newIndex >= slides.children.length) newIndex = 0;
+        //     slides.children[newIndex].dataset.active = true;
+        //     delete activeSlide.dataset.active;
 
-            setTimeout(slideshow, 2000);
-        }
+        //     setTimeout(slideshow, 2000);
+        // }
     </script>
 </body>
 </html>
