--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 backface-visibility: hidden;
                 opacity: 0;
                 /* transform: scale(1.5) rotate(15deg); */
-                -webkit-animation: animate 24s infinite;
-                animation: animate 24s infinite;
+                -webkit-animation: animate 20s infinite;
+                animation: animate 20s infinite;
                 z-index: 3;
             }
             .box .single-box:nth-child(3) img {
@@ -47,7 +47,7 @@
                 animation-delay: 8s;
             }
             .box .single-box:nth-child(1) img {
-                -webkit-animation-delay: 16s;
+                -webkit-animation-delay: 12s;
                 animation-delay: 16s;
             }
             /* .box .single-box:nth-child(1) img {
@@ -264,9 +264,9 @@
     </div> -->
     <div class="wrapper box">
 		<!-- <div class="single-box headerimg"><img alt="" src="images/headertemp.png" width="90%"></div> -->
-		<div class="single-box paranoia"><img alt="" src="images/slide1.png" width="100%"></div>
-		<div class="single-box blank"><img alt="" src="images/slide2.png" width="100%"></div>
-        <div class="single-box blank"><img alt="" src="images/slide3.png" width="100%"></div>
+		<div class="single-box paranoia"><img alt="" src="images/slide1.jpg" width="100%"></div>
+		<div class="single-box blank"><img alt="" src="images/slide2.jpg" width="100%"></div>
+        <div class="single-box blank"><img alt="" src="images/slide3.jpg" width="100%"></div>
 	</div>
     <img src="images/testing.png" style="width: 120%; position: fixed; top: -50%; left: -10%; z-index: 1;">
     <div class="header">
