--- a/minigames/paranoia.html
+++ b/minigames/paranoia.html
@@ -13,21 +13,77 @@
                 top: 0;
                 left: 0;
                 width: 99%;
-                 height: 98%;
+                height: 98%;
             }
             #objPlayer, #objBackground, #darkness{
                 display: none;
             }
+            #objPlayer{z-index: 2;}
             #darkness{
                 background-color: rgb(0,0,0);
+                z-index: 1;
             }
+            dialog{
+				width: 30vw;
+				height:	60vh;
+				border: 1px solid black;
+				position: fixed;
+				top: 5%;
+			}
+			table{
+				border: 1px solid slategray;
+				padding: 10%;
+				text-align: center;
+				width: 100%;
+			}
+                table h1{
+                    font-size: 40px;
+                }
+                .options{
+                    padding: 5% 15%;
+                    font-size: 20px;
+                    border: 1px solid black;
+                    border-radius: 3px;
+                    transition: 0.3s;
+                }
+                    .options:hover{
+                        cursor: pointer;
+                        color: white;
+                        background-color: gray;
+                    }
+                table a{
+                    line-height: 15px;
+                }
+        ::backdrop{
+            background-color: rgba(0,0,0,0.5);
+        }
         </style>
     </head>
 <body>
     <canvas id="mainarea"></canvas>
-    <img id="objPlayer" src="../images/playersmallercropped.png">
-    <img id="objBackground" src="../images/gamebg.jpg">
-    <div id="darkness">
+    <div id="darkness"></div>
+    <img id="objPlayer" src="../images/playersmallercropped.png" alt="ObjPlayer">
+    <img id="objBackground" src="../images/gamebg.jpg" alt="Background">
+    <dialog>
+        <table>
+            <tr>
+                <td>
+                    <h1>Paused</h1>
+                    <hr style="border: 2px solid black;"/>
+                </td>
+            </tr>
+            <tr>
+                <a id="return">
+                    <td class="options">Return to Game</td>
+                </a>
+            </tr>
+            <tr>
+                <a>
+                    <td class="options">Quit</td>
+                </a>
+            </tr>
+        </table>
+    </dialog>
     <script src="jsparanoid.js"></script>
 </body>
 </html>
