--- a/map.html
+++ b/map.html
@@ -23,11 +23,18 @@
             }
             p .intro{
                 top: 5%;
-                left: 5%;
+                left: 10%;
+                font-size: larger;
             }
             h1 .intro{
+                top: 14%;
+                left: 10%;
+                font-size: larger;
+            }
+            .guide{
                 top: 10%;
-                left: 5%;
+                font-size: larger;
+                color: maroon;
             }
             .footer{
                 position: absolute;
@@ -70,13 +77,17 @@
 <body>
     <p class="intro">Welcome to the...</p>
     <h1 class="intro">Navigation Map!</h1>
-    <img id="mapimg" src="images/map2nddraft.jpg" usemap="#image_map">
-        <map name="image_map">
-        <area alt="Home Page" title="Home Page" href="index.html" coords="1485,362,1565,408" shape="rect">
-        <area alt="About Us" title="About Us" href="about.html" coords="1349,731,1426,782" shape="rect">
-        <area alt="Contact Us" title="Contact Us" href="contact.html" coords="612,736,678,785" shape="rect">
-        <area alt="" title="Shall we play a game?" onclick="openDialog()" onmouseover="this.style.cursor='pointer'" coords="804,364,884,413" shape="rect">
-        </map>
+    <p class="intro guide">
+        Click on the circles<br/> 
+        to move around the website
+    </p>
+    <img src="images/map2nddraftsmall3.jpg" usemap="#image_map" id="mapimg">
+    <map name="image_map">
+    <area alt="Home Page" title="Home Page" href="" coords="894,217,935,248" shape="rect">
+    <area alt="Artworks" title="Artworks" onclick="openDialog()" onmouseover="this.style.cursor='pointer'" coords="490,214,523,255" shape="rect">
+    <area alt="About Us" title="About Us" href="" coords="814,434,854,472" shape="rect">
+    <area alt="Contacts" title="Contacts" href="" coords="367,439,404,472" shape="rect">
+    </map>
       
     <div class="footer">
         <p style="text-align: center;">
@@ -100,6 +111,7 @@
                         <img src="images/print 1.png" width="50%" style="position: relative;">
                     </a>
                     <p id="instruct1">
+                        Instructions:<br/>
                         How far can you go before the timer runs out?<br/>
                         Press the Up Arrow Key to replenish, and release to keep going
                     </p>
@@ -107,7 +119,6 @@
             </tr>
             <tr>
                 <td>
-                    
                 </td>
             </tr>
         </table>
