--- a/map.html
+++ b/map.html
@@ -83,10 +83,10 @@
     </p>
     <img src="images/map2nddraftsmall3.jpg" usemap="#image_map" id="mapimg">
     <map name="image_map">
-    <area alt="Home Page" title="Home Page" href="" coords="894,217,935,248" shape="rect">
+    <area alt="Home Page" title="Home Page" href="index.html" coords="894,217,935,248" shape="rect">
     <area alt="Artworks" title="Artworks" onclick="openDialog()" onmouseover="this.style.cursor='pointer'" coords="490,214,523,255" shape="rect">
-    <area alt="About Us" title="About Us" href="" coords="814,434,854,472" shape="rect">
-    <area alt="Contacts" title="Contacts" href="" coords="367,439,404,472" shape="rect">
+    <area alt="About Us" title="About Us" href="about.html" coords="814,434,854,472" shape="rect">
+    <area alt="Contacts" title="Contacts" href="contacts.html" coords="367,439,404,472" shape="rect">
     </map>
       
     <div class="footer">
