--- a/index.html
+++ b/index.html
@@ -299,14 +299,13 @@
     <div class="header">
             <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
                 <center>
-                <h1 style="font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a; z-index: 6;" id="intro">Flea in a jar</h1>
+              <h1 style="letter-spacing: 8px; font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a; z-index: 6;"><br><br>Flea in a jar</h1>
                 <br/>
                 <br/>
                 <br/>
-                <p style="letter-spacing: 20px; color: #a8030a; font-size: 16px;"><b>TUKMA SOLO EXHIBITION 2023</b></p>
+               <p style="letter-spacing: 19px; color: #F2ECEB; font-size: 30px;"><strong>TUKMA SOLO EXHIBITION 2023</strong></p>
                 <br/>
-                <p style="color: rgb(255, 255, 255);"><strong>Unleash the jar, Unleash the flea<br/>
-                    A reminder to others who are still caught like fleas in a jar</strong></p>
+               
                 </center>
                 <br/>
                 <br/>
@@ -325,34 +324,34 @@
             <img src="images/annonymous (2).png" width="80%" style="float: right;">
         </div>
         <div class="text">
-            <h1 id="Statement">Artist's Statement</h1>
-            <hr/>
-            <p>
-                A sense of hopelessness, pressure, and
-                despair— Flea in a jar is an experiment
+            <h1 style="font-size:50px; color: #733832 "><br>ARTIST STATEMENT</h1>
+           
+            <p style="font-size: 20px;">
+                <br><br><strong>A sense of hopelessness, pressure, and
+                despair— Flea in a jar is an<br>experiment
                 where fleas are trapped inside a jar and
-                will jump repeatedly until they learn
+                will jump repeatedly<br> until they learn
                 that hitting the lid is painful. When the
-                lid is removed, they will only jump as
+                lid is removed,<br>they will only jump as
                 high as the lid. Dealing with mental
-                health alone, one feels they are confined
-                to a tight space and are unable to move.
+                health alone,<br>one feels they are confined
+                to a tight space and are unable to move.<br>
                 Constantly jumping from one problem
-                to another, unable to break free of this
+                to another, unable to break<br>free of this
                 never-ending loop.<br/>
                 <br/>
                 Flea in a jar a series focuses on one
-                anonymous red subject, a crumpled
-                paper cutout. The series features
-                dissociation from reality, a sensation of
-                alienation from oneself and one's
-                surroundings. a space where you can
+                anonymous red subject, a crumpled<br>
+                paper cutout.The series features
+                dissociation from reality, a sensation of<br>
+                alienation from oneselfand one's
+                surroundings. a space where you can<br>
                 express your feelings<br/>
                 <br/>
                 This is our catharsis to reduce stigma
-                and educate the public. And a reminder
+                and educate the public.<br> And a reminder
                 to others who are still caught like fleas
-                in a jar.<br/>
+                in a jar.</strong><br/></p>
         </div>
     </div>
     <div class="footer">
