--- a/about.html
+++ b/about.html
@@ -306,6 +306,14 @@
     <div class="aboutpaintings">
         <div id="overlay">
             <br/>
+			<h1 style="font-size:50px; color: white "><br>TUKMA EXHIBITION</h1>
+			 <hr style="width: 40%; border: 2px solid white; margin: auto;"/>
+			 <center>
+			 <p style="color: white; font-size: 20px; margin: 5%;">The TUKMA Art Festival is an event where Arts and Design students can showcase their
+			 creativity through their artwork and performance as part of their Final Performance Task. The festival was held on April 20 at SU Hall and on
+			 April 21 at Luce Foyer. As one of the exhibitors, I, Rianne Gracielle M. Garcia, had the opportunity to display my artwork which took months
+			 of preparation. This was the first face-to-face exhibition since the outbreak, and Rianne's first solo exhibition.</p>
+			 </center>
            <h1 style="font-size:50px; color: white "><br>ARTWORKS</h1>
            <hr style="width: 40%; border: 2px solid white; margin: auto;"/>
             <center>
