Need a dispenser here!
Bloody hell. If I had moar boolets, I would've won by now!

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <img src="images/annonymous (2).png" width="80%" style="float: right;">
         </div>
         <div class="text">
-            <h1 style="font-size:50px; color: #733832 "><br>ARTIST STATEMENT</h1>
+            <h1 style="font-size:50px; color: #733832 " id="Statement"><br>ARTIST STATEMENT</h1>
            
             <p style="font-size: 20px;">
                 <br><br><strong>A sense of hopelessness, pressure, and
