Kick Ass and chew bubblegum, Rianne!

--- a/map.html
+++ b/map.html
@@ -27,7 +27,7 @@
                 font-size: larger;
             }
             h1 .intro{
-                top: 14%;
+                top: 20%;
                 left: 10%;
                 font-size: larger;
             }
@@ -76,7 +76,7 @@
     </head>
 <body>
     <p class="intro">Welcome to the...</p>
-    <h1 class="intro">Navigation Map!</h1>
+    <h1 class="intro" style="top: 2%;">Navigation Map!</h1>
     <p class="intro guide">
         Click on the circles<br/> 
         to move around the website
@@ -154,8 +154,8 @@
         //         game[i].setAttribute('data-index', i);
         //     }
         // }
-        imageMapResize();
+        // imageMapResize();
     </script>
-    <script src="javascript stuff/image-map-resizer-master/js/imageMapResizer.min.js"></script>
+    <!-- <script src="javascript stuff/image-map-resizer-master/js/imageMapResizer.min.js"></script> -->
 </body>
 </html>
