Last Call BBBoolets

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <hr/>
         <span style="display: block;" onclick="location.href='map.html'" onmouseover="this.style.cursor = 'pointer'"><p>MAP</p></span>
         <hr/>
-        <span style="display: block;" onclick="location.href='contacts.html'" onmouseover="this.style.cursor = 'pointer'"><p id="contact">Contact US!</p></span>
+        <span style="display: block;" onclick="location.href='contacts.php'" onmouseover="this.style.cursor = 'pointer'"><p id="contact">Contact US!</p></span>
         <hr/>
     </div>
     <!-- Slideshow system -->
