--- a/map.html
+++ b/map.html
@@ -93,12 +93,12 @@
     <area alt="Home Page" title="Home Page" href="index.html" coords="894,217,935,248" shape="rect">
     <area alt="Artworks" title="Artworks" onclick="openDialog()" onmouseover="this.style.cursor='pointer'" coords="490,214,523,255" shape="rect">
     <area alt="About Us" title="About Us" href="about.html" coords="814,434,854,472" shape="rect">
-    <area alt="Contacts" title="Contacts" href="contacts.html" coords="367,439,404,472" shape="rect">
+    <area alt="Contacts" title="Contacts" href="contacts.php" coords="367,439,404,472" shape="rect">
     </map>
     <map name="original">
         <area alt="Home" title="Home" href="index.html" coords="1497,360,1553,408" shape="rect">
         <area alt="About us" title="About us" href="about.html" coords="1358,731,1417,775" shape="rect">
-        <area alt="Contacts" title="Contacts" href="contacts.html" coords="615,731,676,785" shape="rect">
+        <area alt="Contacts" title="Contacts" href="contacts.php" coords="615,731,676,785" shape="rect">
         <area alt="Lets play!" title="Lets play!" onclick="openDialog()" onmouseover="this.style.cursor='pointer'" coords="816,364,872,411" shape="rect">
       </map>
       
